# lmarena_client

./: .gitignore  README.md  Technical Report.md  config.yaml.example  pyproject.toml  usage.md
lmarena_client/: __init__.py  __main__.py  browser.py  client.py  config.py  core.py  discovery.py  errors.py  http.py  images.py  openai_types.py  server.py  stream.py  uploader.py  utils.py
lmarena_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lmarena_client/webui_dist/: index.html
lmarena_client/webui_dist/assets/: index-Bvdv9a9m.js  index-CiZH874T.js  index-Dd6vN7EA.css  index-v26ZuImW.css
webui/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
webui/src/: App.tsx  db.ts  main.tsx  styles.css  types.ts
webui/src/api/: client.ts
webui/src/components/: ChatView.tsx  MarkdownMessage.tsx  SettingsDrawer.tsx  Sidebar.tsx
webui/src/store/: chats.ts  settings.ts
